// This file listes the protobuffer messages used to communicate between equipotent devices over LoRa

syntax = "proto3";

import "shared/experiment_config.proto";
import "shared/firmware.proto";

option csharp_namespace = "LoRa";
 
// Shared with uart_control
message RequestBootInfo { 
    bool Request = 1; 
} 

// Shared with uart_control
message DeviceConfiguration {
    bool EnableAlwaysSend = 1;
    uint32 AlwaysSendPeriod = 2;
    
    // Ignored if EnableAlwaysSend is true
    uint32 LimitedSendCount = 3;

    // TX power, BW and SF
    int32 TxPower = 4;
    uint32 TxBandwidth = 5;
    uint32 TxDataRate = 6;
}

message LoRaReset {
    
}

message LoRaAck {
    uint32 DeviceId = 1;
}

message LoRaMessage {
    bool IsMulticast = 1;
    
    uint32 DeviceId = 2;
    uint32 CorrelationCode = 3;
    bytes Payload = 4;
    
    oneof Body {
        ForwardExperimentCommand forwardExperimentCommand = 6; // Set role TX/RX, play/pause or switch to predefined experiment
        ExperimentResponse experimentResponse = 7;
        MeasurementStreamRequest measurementStreamRequest = 8;
        MeasurementStreamFragment measurementStreamFragment = 9;
        
        RlncInitConfigCommand rlncInitConfigCommand = 10;
        RlncEncodedFragment rlncEncodedFragment = 11;
        RlncStateUpdate rlncStateUpdate = 12;
        RlncTerminationCommand rlncTerminationCommand = 13;
        DecodingResult decodingResult = 14; // UC ACK
        DecodingUpdate decodingUpdate = 15; // UC ACK

        DeviceConfiguration deviceConfiguration = 16;
        RequestBootInfo requestBootInfo = 17;
        BootMessage bootMessage = 18;
        LoRaReset resetRadio = 19;
        LoRaAck ack = 20;
    }
}
