syntax = "proto3";

enum CommandType {
    Configuration = 0;
    MultiCast = 1;
    MultiCastAck = 2;
    UniCast = 3;
    UniCastAck = 4;
    MeasurementStreamRequest = 5;
    MeasurementStreamFragmentReply = 6;
    SequenceRequest = 7;
    SequenceResponse = 8;
}

message SequenceRequestConfig {
    uint32 MessageCount = 1;
    uint32 Interval = 2;
    uint32 DeviceId = 3;
}

message SpreadingFactorConfig {
    uint32 spreadingFactorRx = 1;
    uint32 spreadingFactorTx = 2;
}
